# advanced-deep-learning

./: .gitignore  README.md
grpo/: README.md  grpo_lab.py  ref_server.py  requirements.txt
rlvr/: README.md
simclr/: .gitignore  README.md  main.py  pyproject.toml
simclr/scripts/: bootstrap_env.sh  modes.py  run_all_local.sh  sbatch_all.sh  sbatch_one.sh  sbatch_one_inner.sh  setup_offline_assets.py  test_all_modes_quick.sh  test_imagenet_simclr_1000.sh  test_imagenet_simclr_250.sh
simclr/src/: main.py  main_test.py  setup.py
vqvae/: README.md  main.py  pyproject.toml  submit.sh
vqvae/src/: components.py  fsq.py  main.py  my_vector_quantize.py  my_vector_quantizer.py  vae.py  vqvae.py
